新增项目service，新增测试controller

--- a/gotoali-gateway/src/main/resources/application.yml
+++ b/gotoali-gateway/src/main/resources/application.yml
@@ -26,6 +26,17 @@ spring:
           # 带前缀
           filters:
             - StripPrefix=1
+            -
+        - id: service
+          # lb代表从注册中心获取服务
+          uri: lb://gotoali-service
+          predicates:
+            # 转发该路径
+            - Path=/service/**
+
+          # 带前缀
+          filters:
+            - StripPrefix=1
 
 
 
