修复gateway配置文件

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>demo.springclould</groupId>
     <artifactId>gotoali</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <modules>
         <module>gotoali-gateway</module>
